--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -5,3 +5,12 @@ security:
 management:
     security:
         enabled: false
+
+logging:
+    level:
+        io:
+            pivotal: DEBUG
+greeting:
+    displayForutne: false
+
+quoteServiceURL: http://quote-service-dev.cfapps.io/quote
