--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -11,6 +11,6 @@ logging:
         io:
             pivotal: DEBUG
 greeting:
-    displayForutne: false
+    displayFortune: false
 
 quoteServiceURL: http://quote-service-dev.cfapps.io/quote
